# arceos

./: .gitignore  Cargo.toml  Makefile  arceos-fada.itb  arceos-phytiym-pi.itb  flake.nix  help.html  index.html  pyvenv.cfg  search-index.js  settings.html
allocator/: all.html  enum.AllocError.html  index.html  struct.AllocatorRc.html  struct.BitmapPageAllocator.html  struct.BuddyByteAllocator.html  struct.SlabByteAllocator.html  struct.TlsfByteAllocator.html  trait.BaseAllocator.html  trait.ByteAllocator.html  trait.IdAllocator.html  trait.PageAllocator.html  type.AllocResult.html
apps/boards/raspi4-usb/: Cargo.toml  README.md  config.txt
apps/boards/raspi4-usb/src/: main.rs
apps/ch341/: Cargo.toml
apps/ch341/src/: main.rs
apps/cli/: Cargo.toml
apps/cli/src/: cmd.rs  main.rs
apps/usb/: Cargo.toml
apps/usb/src/: main.rs
apps/uvc/: Cargo.toml
apps/uvc/src/: main.rs
arceos_api/: all.html  enum.AxError.html  index.html  type.AxResult.html
arceos_posix_api/: all.html  fn.sys_accept.html  fn.sys_bind.html  fn.sys_clock_gettime.html  fn.sys_close.html  fn.sys_connect.html  fn.sys_dup.html  fn.sys_dup2.html  fn.sys_epoll_create.html  fn.sys_epoll_ctl.html  fn.sys_epoll_wait.html  fn.sys_exit.html  fn.sys_fcntl.html  fn.sys_freeaddrinfo.html  fn.sys_fstat.html  fn.sys_getaddrinfo.html  fn.sys_getcwd.html  fn.sys_getpeername.html  fn.sys_getpid.html  fn.sys_getrlimit.html  fn.sys_getsockname.html  fn.sys_listen.html  fn.sys_lseek.html  fn.sys_lstat.html  fn.sys_nanosleep.html  fn.sys_open.html  fn.sys_pipe.html  fn.sys_pthread_create.html  fn.sys_pthread_exit.html  fn.sys_pthread_join.html  fn.sys_pthread_self.html  (+19 more)
crates/driver_pci/: Cargo.toml
crates/driver_pci/src/: bcm2711.rs  device_types.rs  err.rs  lib.rs  phytium.rs  root_complex.rs  types.rs
crates/driver_pci/src/phytium/: mod.rs
crates/driver_usb/: Cargo.toml
crates/driver_usb/guide/: code_structure.md  code_structure1.md  quickstart_usb.md  基于飞腾派的Arceos移植与外设驱动开发.md
crates/driver_usb/src/: .build.rs  addr.rs  device_types.rs  dma.rs  err.rs  lib.rs
crates/driver_usb/src/abstractions/: dma.rs  mod.rs
crates/driver_usb/src/ax/: mod.rs
crates/driver_usb/src/glue/: driver_independent_device_instance.rs  mod.rs  ucb.rs
crates/driver_usb/src/host/: command_exchanger.rs  dcbaa.rs  device.rs  mapper.rs  mod.rs  page_box.rs  scratchpad.rs  xhc.rs
crates/driver_usb/src/host/data_structures/: mod.rs  ring.rs
crates/driver_usb/src/host/data_structures/host_controllers/: mod.rs
crates/driver_usb/src/host/data_structures/host_controllers/xhci/: context.rs  event_ring.rs  mod.rs  ring.rs
crates/driver_usb/src/host/dcbaa/: mod.rs
crates/driver_usb/src/host/exchanger/: command.rs  receiver.rs  transfer.rs
crates/driver_usb/src/host/exp/: dcbaa.rs  scratchpad.rs
crates/driver_usb/src/host/exp/command_ring/: command_type.rs  mod.rs
crates/driver_usb/src/host/exp/event_ring/: mod.rs  segment_table.rs
crates/driver_usb/src/host/exp/exchanger/: command_exchanger.rs  mod.rs  receiver.rs
crates/driver_usb/src/host/multitask/: executor.rs
crates/driver_usb/src/host/port/: endpoint.rs  mod.rs  spawner.rs
crates/driver_usb/src/host/port/class_driver/: keyboard.rs  mouse.rs
crates/driver_usb/src/host/port/class_driver/mass_storage/: mod.rs
crates/driver_usb/src/host/port/init/: descriptor_fetcher.rs  endpoints_initializer.rs  fully_operational.rs  max_packet_size_setter.rs  mod.rs  resetter.rs  slot_structures_initializer.rs
crates/driver_usb/src/host/structures/: command_ring.rs  context.rs  dcbaa.rs  descriptor.rs  event_ring.rs  extended_capabilities.rs  mod.rs  registers.rs  root_port.rs  roothub.rs  scratchpad.rs  transfer_ring.rs  usb.rs  usb_audio.rs  usb_device.rs  xhci_command_manager.rs  xhci_event_manager.rs  xhci_eventmanager.rs  xhci_roothub.rs  xhci_slot_manager.rs  xhci_slotmanager.rs  xhci_usb_device.rs
crates/driver_usb/src/host/structures/ring/command/: mod.rs
crates/driver_usb/src/host/structures/ring/event/: mod.rs  segment_table.rs
crates/driver_usb/src/host/structures/ring/transfer/: mod.rs
crates/driver_usb/src/host/structures/todos/: TODO.md
crates/driver_usb/src/host/structures/usb/: mod.rs  usb_device.rs
crates/driver_usb/src/host/usb/: define.rs  mod.rs
crates/driver_usb/src/host/usb/descriptors/: desc_configuration.rs  desc_device.rs  desc_endpoint.rs  desc_hid.rs  desc_interface.rs  desc_report.rs  mod.rs
crates/driver_usb/src/host/usb/drivers/: mod.rs
crates/driver_usb/src/host/usb/drivers/driver_usb_hid/: mod.rs  req.rs
crates/driver_usb/src/host/xhci/: context.rs  event.rs  mod.rs  registers.rs  ring.rs  xhci_device.rs  xhci_operations.rs
crates/driver_usb/src/host/xhci/command_ring/: mod.rs
crates/driver_usb/src/host/xhci/event_ring/: mod.rs  segment_table.rs
crates/driver_usb/src/host/xhci/phytium/: mailbox.rs  mod.rs
crates/driver_usb/src/host/xhci/vl805/: mailbox.rs  mod.rs
crates/driver_usb/src/host/xhci/vl805_tomodify/: mailbox.rs  mod.rs
crates/driver_usb/src/platform_spec/: mod.rs
crates/driver_usb/src/platform_spec/vl805/: mod.rs
crates/driver_usb/src/usb/: mod.rs  urb.rs
crates/driver_usb/src/usb/descriptors/: desc_InterfaceAssociation.rs  desc_configuration.rs  desc_device.rs  desc_endpoint.rs  desc_hid.rs  desc_interface.rs  desc_str.rs  mod.rs  parser.rs  topological_desc.rs
crates/driver_usb/src/usb/descriptors/desc_uvc/: mod.rs  uvc_endpoints.rs  uvc_interfaces.rs
crates/driver_usb/src/usb/drivers/: driverapi.rs  mod.rs
crates/driver_usb/src/usb/operation/: mod.rs
crates/driver_usb/src/usb/trasnfer/: control.rs  interrupt.rs  isoch.rs  mod.rs
crates/driver_usb/src/usb/trasnfer/endpoints/: mod.rs
crates/driver_usb/src/usb/universal_drivers/: mod.rs
crates/driver_usb/src/usb/universal_drivers/ch341_drivers/: ch341.rs  mod.rs
crates/driver_usb/src/usb/universal_drivers/hid_drivers/: hid_mouse.rs  mod.rs
crates/driver_usb/src/usb/universal_drivers/uvc_drivers/: generic_uvc.rs  mod.rs  uvc_device_model.rs  uvc_spec_transfer.rs
crates/page_box/: Cargo.toml
crates/page_box/src/: lib.rs
(+1433 files in other folders)
