[package]
name = "arceos-cli"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# use-ramfs = ["axstd/myfs", "dep:axfs_vfs", "dep:axfs_ramfs", "dep:crate_interface"]
default = []

[dependencies]
# axfs_vfs = { path = "../../../crates/axfs_vfs", optional = true }
# axfs_ramfs = { path = "../../../crates/axfs_ramfs", optional = true }
# crate_interface = { path = "../../../crates/crate_interface", optional = true }
# axstd = { path = "../../../ulib/axstd", features = ["alloc", "fs"], optional = true }

driver_pca9685 = { path = "../../crates/driver_pca9685" }
driver_i2c = { path = "../../crates/driver_i2c" }
axstd = { path = "../../ulib/axstd", optional = true }
axfeat = {path = "../../api/axfeat", features = ["phytium-pi","usb-host","multitask","sched_rr"]}
driver_usb ={ path = "../../crates/driver_usb"}
xhci = "0.9"