[package]
name = "arceos-usb"
version = "0.1.0"
edition = "2021"
authors = ["zhourui <zrufo747@outlook.com>"]


[features]
default = []

[dependencies]
axstd = { path = "../../ulib/axstd", optional = true }
axfeat = {path = "../../api/axfeat", features = ["phytium-pi","usb-host","multitask","sched_rr"]}
driver_usb ={ path = "../../crates/driver_usb"}