[package]
name = "arceos-uvc"
version = "0.1.0"
edition = "2021"
authors = ["dbydd <dbydd@outlook.com>"]

[dependencies]

axstd = { path = "../../ulib/axstd" }
driver_usb ={ path = "../../crates/driver_usb"}
axalloc = { path = "../../modules/axalloc"}
axfeat = {path = "../../api/axfeat", features = ["phytium-pi","usb-host","multitask","sched_rr"]}