[package]
name = "driver_usb"
version = "0.1.0"
edition = "2021"
description = "Common traits and types for usb device drivers"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/driver_usb"
documentation = "https://rcore-os.github.io/arceos/driver_usb/index.html"


[features]
default = []
arceos = []
vl805 = []

[dependencies]
xhci = "0.9"
log="0.4"
memory_addr = {path= "../../crates/memory_addr"}
spinlock = { path = "../../crates/spinlock" }
tock-registers = "0.9.0"
bit_field = "0.10"
num-derive = "0.4.0"
num-traits = { version = "0.2.16", default-features = false }
byteorder = { version = "1.4.3", default-features = false }


# arceos
driver_common = { path = "../driver_common" }
driver_pci = { path = "../driver_pci" }
axhal = {path = "../../modules/axhal",features=["irq"]}
axtask = {path = "../../modules/axtask",features = ["multitask","sched_rr"]}
axconfig = {path = "../../modules/axconfig"}
axalloc = {path="../../modules/axalloc"}