[package]
name = "arceos-raspi4-usb"
version = "0.1.0"
edition = "2021"
authors = ["Rui Zhou <zrufo747@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { path = "../../../ulib/axstd" }
axfeat = {path = "../../../api/axfeat", features = ["usb-host", "bsp-raspi4" ]}



